--- a/client/package.json
+++ b/client/package.json
@@ -36,6 +36,7 @@
     "react-dom": "^0.14.8",
     "react-redux": "^4.0.0",
     "react-router": "^2.0.1",
+    "react-share": "^1.11.0",
     "react-social": "^1.6.2",
     "redux": "^3.0.4",
     "redux-form": "^5.2.0",
